Kubernetes/kubernetes-wordpress/manifests/pod-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-pod
  namespace: demo
  labels:
    environment: demo
    app: wordpress
spec:
  containers:
    # https://hub.docker.com/_/mysql
    - name: mysql
      image: mysql:5
      ports:
        - containerPort: 3306
    - name: wordpress
      image: wordpress:latest
      ports:
        - containerPort: 80
      volumeMounts:
          - name: wordpress-conf
            mountPath: /var/www/html/k8s-wp-config.php
            subPath: wp-config.php
  # Note : the volumes declaration is at the containers declaration level, this 
  # is because all containers inside a pod share the same volumes.
  volumes:
    - name: wordpress-conf
      configMap: 
        name: wordpress-config
