Kubernetes/kubernetes-wordpress/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-pod
  namespace: demo
  labels:
    environment: demo
    app: wordpress
spec:
  containers:
    # https://hub.docker.com/_/mysql
    - name: mysql
      image: mysql:5
      ports:
        - containerPort: 3306
    - name: wordpress
      image: wordpress:latest
      ports:
        - containerPort: 80
